fix: expand ASCII diagram from 3 to 10 elements
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>